@@ -15,6 +15,8 @@ PHP                                                                        NEWS
 - Opcache:
   . Fix allocation loop in zend_shared_alloc_startup(). (nielsdos)
   . Access violation on smm_shared_globals with ALLOC_FALLBACK. (KoudelkaB)
+  . Fixed bug GH-11336 (php still tries to unlock the shared memory ZendSem
+    with opcache.file_cache_only=1 but it was never locked). (nielsdos)
 
 - SPL:
   . Fixed bug GH-11338 (SplFileInfo empty getBasename with more than one
